<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <Toolbar
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:theme="@style/General.ToolBar"
        android:title="@string/settings_title" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/title">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <RelativeLayout
                android:id="@+id/markNumbers"
                style="@style/SettingsLayout">

                <TextView
                    android:id="@+id/markNumbersTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_markNumbers" />

                <TextView
                    android:id="@+id/markNumbersAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/markNumbersTitle"
                    android:layout_toStartOf="@id/markNumbersSwitch"
                    android:text="@string/settings_markNumbersAnnotations" />

                <CheckBox
                    android:id="@+id/markNumbersSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/markNumbersTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/markLines"
                style="@style/SettingsLayout"
                android:layout_below="@id/markNumbers">

                <TextView
                    android:id="@+id/markLinesTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_markLines" />

                <TextView
                    android:id="@+id/markLinesAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/markLinesTitle"
                    android:layout_toStartOf="@id/markLinesSwitch"
                    android:text="@string/settings_markLinesAnnotations" />

                <CheckBox
                    android:id="@+id/markLinesSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/markLinesTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/checkNotes"
                style="@style/SettingsLayout"
                android:layout_below="@id/markLines">

                <TextView
                    android:id="@+id/checkNotesTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_checkNotes" />

                <TextView
                    android:id="@+id/checkNotesAnnotation"
                    style="@style/Settings.Info"
                    android:layout_below="@id/checkNotesTitle"
                    android:layout_toStartOf="@id/checkNotesSwitch"
                    android:text="@string/settings_checkNotesAnnotations" />

                <CheckBox
                    android:id="@+id/checkNotesSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/checkNotesTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/powerMode"
                style="@style/SettingsLayout"
                android:layout_below="@id/checkNotes">

                <TextView
                    android:id="@+id/powerModeTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_powerMode" />

                <TextView
                    android:id="@+id/powerModeAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/powerModeTitle"
                    android:layout_toStartOf="@id/powerModeSwitch"
                    android:text="@string/settings_powerModeAnnotations" />

                <CheckBox
                    android:id="@+id/powerModeSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/powerModeTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/showErrors"
                style="@style/SettingsLayout"
                android:layout_below="@id/powerMode">

                <TextView
                    android:id="@+id/showErrorsTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_showErrors" />

                <TextView
                    android:id="@+id/showErrorsAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/showErrorsTitle"
                    android:layout_toStartOf="@id/showErrorsSwitch"
                    android:text="@string/settings_showErrorsAnnotations" />

                <CheckBox
                    android:id="@+id/showErrorsSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/showErrorsTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/showTime"
                style="@style/SettingsLayout"
                android:layout_below="@id/showErrors">

                <TextView
                    android:id="@+id/showTimeTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_showTime" />

                <TextView
                    android:id="@+id/showTimeAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/showTimeTitle"
                    android:layout_toStartOf="@id/showTimeSwitch"
                    android:text="@string/settings_showTimeAnnotations" />

                <CheckBox
                    android:id="@+id/showTimeSwitch"
                    style="@style/SettingsCheckBox"
                    android:layout_alignTop="@id/showTimeTitle" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/color"
                style="@style/SettingsLayout"
                android:layout_below="@id/showTime">

                <TextView
                    android:id="@+id/colorTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_color" />

                <TextView
                    android:id="@+id/colorAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/colorTitle"
                    android:text="@string/settings_color_annotations" />

                <com.aol.philipphofer.gui.custom.CustomButton
                    android:id="@+id/colorButton"
                    style="@style/General.Button"
                    android:layout_below="@id/colorAnnotations"
                    android:layout_margin="@dimen/_3sdp"
                    android:text="@string/settings_color_button" />

            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/support"
                style="@style/SettingsLayout"
                android:layout_below="@id/color">

                <TextView
                    android:id="@+id/supportTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_support" />

                <TextView
                    android:id="@+id/supportAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/supportTitle"
                    android:text="@string/settings_support_annotations" />

                <com.aol.philipphofer.gui.custom.CustomButton
                    android:id="@+id/supportButton"
                    style="@style/General.Button"
                    android:layout_below="@id/supportAnnotations"
                    android:layout_margin="@dimen/_3sdp"
                    android:text="@string/settings_support" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/deleteData"
                style="@style/SettingsLayout"
                android:layout_below="@id/support">

                <TextView
                    android:id="@+id/deleteDataTitle"
                    style="@style/Settings.Title"
                    android:text="@string/settings_deleteData" />

                <TextView
                    android:id="@+id/deleteDataAnnotations"
                    style="@style/Settings.Info"
                    android:layout_below="@id/deleteDataTitle"
                    android:text="@string/settings_deleteDataAnnotations" />

                <com.aol.philipphofer.gui.custom.CustomButton
                    android:id="@+id/deleteDataButton"
                    style="@style/General.Button"
                    android:layout_below="@id/deleteDataAnnotations"
                    android:layout_margin="@dimen/_3sdp"
                    android:text="@string/settings_deleteData" />
            </RelativeLayout>

            <RelativeLayout
                android:id="@+id/info"
                style="@style/SettingsLayout"
                android:layout_below="@id/deleteData">

                <com.aol.philipphofer.gui.custom.CustomButton
                    android:id="@+id/infoButton"
                    style="@style/General.Button"
                    android:layout_margin="@dimen/_3sdp"
                    android:text="@string/settings_info" />
            </RelativeLayout>

        </RelativeLayout>
    </ScrollView>
</RelativeLayout>