<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <com.aol.philipphofer.gui.custom.CustomTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/General.Title"
            android:text="@string/ratingdialog_title" />

    </com.aol.philipphofer.gui.custom.CustomTitleBar>

    <TextView
        android:id="@+id/description"
        style="@style/General.Title.Small"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleBar"
        android:layout_centerHorizontal="true"
        android:text="@string/ratingdialog_info" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/description"
        android:orientation="vertical"
        android:weightSum="3">

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/rate"
            style="@style/General.Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ratingdialog_rate" />

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/no_thanks"
            style="@style/General.Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ratingdialog_no" />

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/remind_me_later"
            style="@style/General.Button"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/ratingdialog_later" />

    </LinearLayout>

</RelativeLayout>