<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/background"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/transparent">

    <RelativeLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@color/gray">

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/beginner"
            style="@style/General.Button"
            android:layout_centerHorizontal="true"
            android:tag="0"
            android:text="@string/beginner"
            android:textSize="@dimen/general_text_title" />

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/advanced"
            style="@style/General.Button"
            android:layout_below="@+id/beginner"
            android:layout_centerHorizontal="true"
            android:tag="1"
            android:text="@string/advanced"
            android:textSize="@dimen/general_text_title" />

        <com.aol.philipphofer.gui.custom.CustomButton
            android:id="@+id/expert"
            style="@style/General.Button"
            android:layout_below="@id/advanced"
            android:layout_centerHorizontal="true"
            android:tag="2"
            android:text="@string/expert"
            android:textSize="@dimen/general_text_title" />

        <com.google.android.gms.ads.AdView
            xmlns:ads="http://schemas.android.com/apk/res-auto"
            android:id="@+id/adView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/expert"
            android:layout_centerHorizontal="true"
            ads:adSize="LARGE_BANNER"
            ads:adUnitId="@string/adMob_bannerID" />

    </RelativeLayout>

</RelativeLayout>