<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.aol.philipphofer.gui.custom.CustomTitleBar
        android:id="@+id/titleBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/title"
            style="@style/General.Title" />

    </com.aol.philipphofer.gui.custom.CustomTitleBar>

    <TextView
        android:id="@+id/annotations"
        style="@style/General.Title.Small"
        android:layout_below="@id/titleBar" />

    <RelativeLayout
        android:id="@+id/infoLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/annotations"
        android:layout_margin="5dp"
        android:background="@drawable/box">

        <TextView
            android:id="@+id/difficulty"
            style="@style/General.Info"
            android:text="@string/endcard_difficulty" />

        <TextView
            android:id="@+id/difficultyInfo"
            style="@style/General.Info"
            android:layout_toEndOf="@id/difficulty" />

        <TextView
            android:id="@+id/time"
            style="@style/General.Info"
            android:layout_below="@id/difficulty"
            android:text="@string/endcard_time" />

        <TextView
            android:id="@+id/timeInfo"
            style="@style/General.Info"
            android:layout_below="@id/difficulty"
            android:layout_toEndOf="@id/time" />

        <TextView
            android:id="@+id/bestTime"
            style="@style/General.Info"
            android:layout_below="@id/time"
            android:text="@string/endcard_besttime" />

        <TextView
            android:id="@+id/bestTimeInfo"
            style="@style/General.Info"
            android:layout_below="@id/time"
            android:layout_toEndOf="@id/bestTime" />

    </RelativeLayout>

    <com.aol.philipphofer.gui.custom.CustomButton
        android:id="@+id/okbutton"
        style="@style/General.Button"
        android:layout_below="@id/infoLayout"
        android:layout_margin="5dp"
        android:text="@string/ok" />

</RelativeLayout>